@@ -1,3 +1,9 @@
+2022-07-16 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* support/regression/tests/bug-1952.c,
+	  support/valdiag/tests/bug-1952.c:
+	  Tests for __func__.
+
 2022-07-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCCsymt.c,
